--- a/payment_notifier/templates/base.html
+++ b/payment_notifier/templates/base.html
@@ -33,7 +33,7 @@
                 <a href="#">Sms</a>
             </li>
             <li>
-                <a href="#">whatsapp</a>
+                <a href="/app/sendWhatsApp/">whatsapp</a>
             </li>
             <li>
                 <a href="#">email</a>
